--- a/src/components/forms/FormLogin.astro
+++ b/src/components/forms/FormLogin.astro
@@ -33,7 +33,7 @@ import "src/styles/forms.css";
 	</p>
 </div>
 
-<div class="form__group">
+<div class="form__group btn">
 	<BtnColor text="INGRESAR" />
 </div>
 <style>
@@ -46,6 +46,13 @@ import "src/styles/forms.css";
 			text-decoration: none;
 			color: inherit;
 			letter-spacing: 1px;
+		}
+	}
+	.form__group{
+		&.btn{
+			width: 90%;
+			max-width: 400px;
+			
 		}
 	}
 </style>
