--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -3,9 +3,28 @@
     --bg-color-light: #dfdfdf;
     --text-color-dark: #fefefe;
     --text-color-light: #010101;
-    --green-light:#29ff00;
+
+    --green-50: #ecffe4;
+    --green-100: #d3ffc4;
+    --green-200: #aaff90;
+    --green-300: #72ff50;
+    --green-500: #1fe600;
+    --green-600: #14b800;
+    --green-700: #0f8b00;
+    --green-800: #116d07;
+    --green-950: #023400;
     --green:#1b8800;
-    --red-light: #ff0000;
+
+    --red-50: #FFEEF1;
+    --red-100: #FFDAE1;
+    --red-200: #FFBBC9;
+    --red-300: #FF8BA2;
+    --red-400: #FF496D;
+    --red-500: #FF1140;
+    --red-600: #FF0033;
+    --red-700: #E7002E;
+    --red-800: #BE0026;
+    --red-950: #560011;
     --red: #88001b;
 }
 h1,h2,h3,h4,h5,ul,body,main,div,input,label,form,nav,header,p
@@ -30,7 +49,7 @@ body {
     background-color: var(--bg-color-dark);
     color: var(--text-color-dark);
 
-    /* Si el bodi no está en los form */
+    /* Si el body no está en los form */
     &:has(#menu-toggle){
         min-height: auto;
     }
