--- a/src/components/IconPassword.astro
+++ b/src/components/IconPassword.astro
@@ -26,6 +26,8 @@
 <style>
     span {
         position: absolute;
+        cursor: pointer;
+
         right: 0.5rem;
         width: 18px;
         height: 18px;
