--- a/src/components/forms/InputSignin.astro
+++ b/src/components/forms/InputSignin.astro
@@ -1,6 +1,6 @@
 ---
 import IconPassword from "@components/IconPassword.astro";
-import IconForm from "../IconForm.astro";
+import IconForm from "@components/IconForm.astro";
 
 const { id, type, text, textError } = Astro.props;
 const idLastname = id == "lastname" && 'label-lastname' 
