--- a/src/components/svg/ChartSVG.astro
+++ b/src/components/svg/ChartSVG.astro
@@ -1,5 +1,5 @@
 <li class="link-page" id="broker">
-    <a href="/broker">
+    <a href="/broker" aria-label="Ir al broker">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 448 512"
