--- a/src/components/svg/HouseSVG.astro
+++ b/src/components/svg/HouseSVG.astro
@@ -1,5 +1,5 @@
 <li class="link-page" id="inicio">
-    <a href="/inicio">
+    <a href="/inicio" aria-label="Ir al inicio">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 576 512"
