--- a/src/components/svg/PiggySVG.astro
+++ b/src/components/svg/PiggySVG.astro
@@ -1,5 +1,5 @@
 <li class="link-page" id="fondo">
-    <a href="/fondo">
+    <a href="/fondo" aria-label="Ir al fondo">
         <svg
         xmlns="http://www.w3.org/2000/svg"
         viewBox="0 0 576 512"
