--- a/src/components/svg/UserSVG.astro
+++ b/src/components/svg/UserSVG.astro
@@ -1,5 +1,5 @@
 <li class="link-page" id="cuenta">
-    <a href="/cuenta">
+    <a href="/cuenta" aria-label="ir a la cuenta">
         <svg
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 448 512"
