--- a/src/components/DataAccount.astro
+++ b/src/components/DataAccount.astro
@@ -3,7 +3,12 @@ import CardDataAccount from "@components/CardDataAccount.astro";
 import BackgroundColors from "@components/BackgroundColors.astro";
 
 const randomIndex = Math.floor(Math.random() * 10);
-let user = { name: "ssss", username: "", email: "" };
+
+// const res = await fetch('https://jsonplaceholder.typicode.com/users')
+// const data = await res.json()
+// let user = data[randomIndex];
+
+let user = {username:"hopa",email:"em@",name:"juan"}
 ---
 
 <BackgroundColors type="data-account">
@@ -53,10 +58,10 @@ let user = { name: "ssss", username: "", email: "" };
                 letter-spacing: 1px;
 
                 body.red & {
-                    color: var(--red-light);
+                    color: var(--red-600);
                 }
                 body.green & {
-                    color: var(--green-light);
+                    color: var(--green-600);
                 }
                 html.light > body.red & {
                     color: var(--red);
