--- a/src/components/forms/FormLogin.astro
+++ b/src/components/forms/FormLogin.astro
@@ -33,8 +33,8 @@ import "src/styles/forms.css";
 	</p>
 </div>
 
-<div class="form__group btn">
-	<BtnColor text="INGRESAR" />
+<div class="form__group">
+	<BtnColor text="INGRESAR" type="form"/>
 </div>
 <style>
 	p {
@@ -46,13 +46,6 @@ import "src/styles/forms.css";
 			text-decoration: none;
 			color: inherit;
 			letter-spacing: 1px;
-		}
-	}
-	.form__group{
-		&.btn{
-			width: 90%;
-			max-width: 400px;
-			
 		}
 	}
 </style>
