--- a/src/sections/Footer.astro
+++ b/src/sections/Footer.astro
@@ -26,24 +26,21 @@
         #background_footer {
             width: 100%;
             height: 7.5px;
-        }
-    }
-    body.red {
-        #background_footer {
-            background: linear-gradient(
-                to top,
-                var(--red-light) 10%,
-                transparent
-            );
-        }
-    }
-    body.green {
-        #background_footer {
-            background: linear-gradient(
-                to top,
-                var(--green-light) 10%,
-                transparent
-            );
+
+            body.red & {
+                background-image: linear-gradient(
+                    to top,
+                    var(--red-600) 10%,
+                    transparent
+                );
+            }
+            body.green & {
+                background-image: linear-gradient(
+                    to top,
+                    var(--green-600) 10%,
+                    transparent
+                );
+            }
         }
     }
 </style>
