--- a/src/sections/Form.astro
+++ b/src/sections/Form.astro
@@ -10,7 +10,7 @@ const typeForm = type == "login" ? "form-login" : "form-signin";
 
 <BackgroundColors type={typeForm}>
     <form class=`form ${typeForm}` id={typeForm}>
-        {type == "signin" ? <FormSignin data-astro-reload /> : <FormLogin />}
+        {type == "signin" ? <FormSignin /> : <FormLogin />}
     </form>
 </BackgroundColors>
 <style>
