--- a/src/components/DataAccount.astro
+++ b/src/components/DataAccount.astro
@@ -4,11 +4,10 @@ import BackgroundColors from "@components/BackgroundColors.astro";
 
 const randomIndex = Math.floor(Math.random() * 10);
 
-// const res = await fetch('https://jsonplaceholder.typicode.com/users')
-// const data = await res.json()
-// let user = data[randomIndex];
+const res = await fetch('https://jsonplaceholder.typicode.com/users')
+const data = await res.json()
+let user = data[randomIndex];
 
-let user = {username:"hopa",email:"em@",name:"juan"}
 ---
 
 <BackgroundColors type="data-account">
