--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -22,3 +22,8 @@ import TextLink from "@sections/TextLink.astro";
 		margin-bottom: 2rem;
 	}
 </style>
+<script>
+	if (document.cookie) {
+		document.location.assign("/inicio");
+	}
+</script>
