--- a/src/components/TitlesWelcome.astro
+++ b/src/components/TitlesWelcome.astro
@@ -47,3 +47,14 @@ else text = "Buenas noches";
         }
     }
 </style>
+<script>
+    import {getUser} from 'src/scripts/usersAPI'
+
+    const cookie = document.cookie;
+    const token = cookie.split("=")[1];
+
+    const data = await getUser(token);
+
+    console.log(data)
+    
+</script>
